--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -19,6 +19,8 @@ include_HEADERS =				\
 include/uobject.h
 
 urbiinclude_HEADERS =				\
+include/urbi/umain.hh				\
+include/urbi/qt_umain.hh			\
 include/urbi/uabstractclient.hh			\
 include/urbi/uclient.hh				\
 include/urbi/uconversion.hh			\
