Install umain.cc in urbi/share/umain
	* src/liburbi/Makefile.am: Here.

--- a/sdk-remote/src/liburbi/Makefile.am
+++ b/sdk-remote/src/liburbi/Makefile.am
@@ -24,6 +24,9 @@ urbiinclude_HEADERS = $(uobject_headers)
 ## liburbi.la.  ##
 ## ------------ ##
 
+umaindir=$(datadir)/umain
+umain_DATA = umain.cc
+
 env_LTLIBRARIES = liburbi.la
 
 liburbi_la_SOURCES =				\
