Add support for loading uobjects as shared modules.
When its associated static initialization code is executed, each uobject
will append itself to a global list. To be able to add new uobjects at
run-time, we thus just need to remember which ones we already started.


	* configure.ac: URBI_WITH_LTDL.
	* src/kernel/uobject.cc(uobjects_initialize): Move effective
	  uobjects loading...
	  (uobjects_reload): Here. Use a list to remember which uobjects
	  were already started.
	  (uobjects_load_module): Use ltdl to load a module, and call
	  uobjects_reload.

--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,8 @@ case $enable_precompiled_symbols in
                  [Define if Urbi symbols should be precompiled]);;
 esac
 
+URBI_WITH_LTDL
+
 # Where we look for the installed files.
 pkgdatadir=${datadir}/$PACKAGE
 AC_SUBST([urbidir], [${pkgdatadir}/urbi])
