--- a/externals/bootstrap.cfg
+++ b/externals/bootstrap.cfg
@@ -10,7 +10,7 @@ external: tests -> urbivalid
 external: externals/sdk-remote -> sdk-remote
 link: src/uobject -> externals/sdk-remote/src/liburbi/uobject
 
-externals: bison -> bison
+external: bison -> bison
 subpackage: bison
 
 keep: INSTALL
