--- a/Makefile.am
+++ b/Makefile.am
@@ -95,6 +95,6 @@ check-%:
 	cd tests && $(MAKE) $(AM_MAKEFLAGS) $@
 
 # The target run by the buildfarm.
-CHECK_BUILDFARM_FLAGS = -j4 AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
+CHECK_BUILDFARM_FLAGS = AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
 check-buildfarm:
 	cd tests && $(MAKE) $(AM_MAKEFLAGS) check-html $(CHECK_BUILDFARM_FLAGS)
