Avoid PRINTER which is used by some other programs.
	* src/ast/ast.yml: Rely on PPRINTER instead.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -777,7 +777,7 @@ Lazy:
         access: rwW
   printer:
     - ~strict
-    - '{ if (getenv("PRINTER")) ostr_ << "/* " << *n->lazy_get() << " */"; }'
+    - '{ if (getenv("PPRINTER")) ostr_ << "/* " << *n->lazy_get() << " */"; }'
 
 Routine:
   super: Exp
