Hook YYDEBUG to debug compilation mode.
	* configure.ac: Define YYDEBUG in debug mode.
	* src/parser/ugrammar.y: No longer force debugging code emission.
	Include sdk/config.h.
	* src/parser/parser-impl.hh, src/parser/parser-impl.cc: Ditto.
	(ParserImpl::debug_): New.
	Use it.

--- a/configure.ac
+++ b/configure.ac
@@ -52,6 +52,8 @@ compilation_mode_set ()
                   [Define to enable Urbi debugging tools.])
         AC_DEFINE([_GLIBCXX_DEBUG], [1],
                   [Define to enable STL debug mode.])
+        AC_DEFINE([YYDEBUG], [1],
+                  [Define to enable parser runtime debug traces.])
         # Pass USE_VALGRIND only if valgrind/valgrind.h exists.
         AC_CHECK_HEADER([valgrind/valgrind.h],
                         [AC_DEFINE([USE_VALGRIND], [1],
