Use pointer onto symbols_type so that containers are freed.
	* src/ast/ast.yml: Use "symbols_type*" instead of "symbols_type" to
	let the cloner free the container.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -830,9 +830,9 @@ Function:
   super: Routine
   attributes:
     - closed_variables:
-        type: symbols_type
+        type: symbols_type*
         access: rwW
-        init: 'symbols_type()'
+        init: 'new symbols_type()'
   # Cloning a list of reference such as this one requires a mapping table
   # in the cloner. Forbid it for now.
   cloner_prologue: assert(!e->local_variables_get());
