Do not use an intermediate AbstractScope level.
Before this patch, "Scope" and "Do" both derive from "AbstractScope".
This hierarchy is not needed: "Do" may derive from "Scope" directly as
the only change is the use of a different "scopeTag" in "Do" scopes
which is totally harmless.

This allows us to group two "Finally" level and avoid one non-terminal
call at every scope traversal, which should both bring a speed gain and
reduce stack usage.

	* src/ast/ast.yml: Remove AbstractScope, make Do inherit from
	Scope and make Scope concrete explicitly as it is no longer a
	leaf node.
	* src/ast/.gitignore: Update.
	* src/binder/binder.hh, src/binder/binder.cc,
	* src/flower/flower.cc, src/parser/ast-factory.hh,
	* src/parser/ast-factory.cc: Use Scope rather than
	AbstractScope.
	* src/runner/interpreter.hh, src/runner/interpreter.cc: Remove
	AbstractScope visitor and use Scope directly.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -261,8 +261,9 @@ TaggedStmt:
 ## Scope.  ##
 ## ------- ##
 
-AbstractScope:
+Scope:
   super: Exp
+  concrete: True
   attributes:
     - body:
         type: 'rExp'
@@ -275,21 +276,16 @@ AbstractScope:
     - 'libport::decendl'
     - '"}"'
 
-Scope:
-  super: AbstractScope
-  printer:
-    - '{ visit(n.unsafe_cast<const AbstractScope>()); }'
-
 Do:
-  super: AbstractScope
+  super: Scope
   attributes:
     - target: { type: 'rExp', desc: The default target }
   default: |2
     operator()(n->target_get());
-    visit(libport::shared_ptr<typename Const<AbstractScope>::type>((AbstractScope*)n.get()));
+    visit(libport::shared_ptr<typename Const<Scope>::type>((Scope*)n.get()));
   printer:
     - '{ ostr_ << "do " << *n->target_get() << " "; }'
-    - '{ visit(n.cast<const AbstractScope>()); }'
+    - '{ visit(n.cast<const Scope>()); }'
 
 ## -------------------- ##
 ## Composing commands.  ##
@@ -795,7 +791,7 @@ Routine:
         desc: Formal arguments.  If null, a lazy function.
         access: rwW
     - body:
-        type: 'rAbstractScope'
+        type: 'rScope'
         access: rwW
         mandatory: False
         desc: Body
