Cache the frames size inside function.
They were recomputed at each function execution

    * src/ast/ast.yml: Add field to store frames size.
    * src/binder/binder.cc: Fill them.
    * src/runner/interpreter.cc: Use them instead of recomputing.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -805,6 +805,14 @@ Routine:
         init: "new declarations_type()"
         mandatory: False
         access: rwW
+    - local_size:
+        type: unsigned
+        init: '0'
+        access: rW
+    - closed_size:
+        type: unsigned
+        init: '0'
+        access: rW
   inline:
     header inside: |2
         public:
