Adjust to sdk/local.mk.
	* externals/libport: Update.
	* Makefile.am: Do it.
	Move include/ related stuff to...
	* include/local.mk: here.

--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -5,36 +5,14 @@ ACLOCAL_AMFLAGS = -I build-aux -I sdk
 
 SUBDIRS =					\
 	jpeg-6b lib/libport			\
-	sdk src .				\
+	src .					\
 	doc
 SVN_EXTERNALS += jpeg-6b sdk libport
 
-
-## ---------- ##
-## include/.  ##
-## ---------- ##
-
-# Backward compatibility.
-include_HEADERS =				\
-include/uobject.h
-
-urbiinclude_HEADERS =				\
-include/urbi/uabstractclient.hh			\
-include/urbi/uclient.hh				\
-include/urbi/uconversion.hh			\
-include/urbi/uexternal.hh			\
-include/urbi/usyncclient.hh
-
-# liburbi is installed in $prefix, and its headers depend on libport.
-# So we must provide libport in $prefix, although they are also
-# installed as part of the SDK.  Using symlinks is not portable.
-#include_libport_dir = $(includedir)/libport
-#nodist_include_libport__HEADERS = $(libport_HEADERS) $(nodist_libport_HEADERS)
-#include_libport_sys_dir = $(include_libport_dir)/sys
-#nodist_include_libport_sys__HEADERS = $(libportsys_HEADERS)
-
-include_libport = include/libport
-include include/libport/libport.mk
+host_SCRIPTS =
+nodist_host_DATA =
+include sdk/local.mk
+include include/local.mk
 
 
 ## ------- ##
