Use a specialized method to evaluate nodes, instead of visitor.
    * dev/ast-nodes-gen: Generate eval method.
    * src/runner/interpreter.cc,
    * src/runner/interpreter.hh: Use it.
    * src/ast/ast.yml: Include interpreter.
    * tests: Update: fix location.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -203,7 +203,9 @@ printer_cc_prologue: |2
 Ast:
   super: 'libport::RefCounted'
   inline:
-    header prologue: '# include <ast/fwd.hh>'
+    header prologue: |2
+      # include <ast/fwd.hh>
+      namespace runner { class Interpreter; }
   attributes:
     - location:
         type: loc
