Do not desugar incrementation directly.
'x++' construct are now stored as Incrementation nodes, and are desugared later.
This aim at keeping a fidel ast to present to the user.

    * src/ast/ast.yml (Incrementation): New node.
    * src/ast/.gitignore: Ignore it.
    * src/parser/tweast.hh: Add forgotten include.
    * src/parser/ugrammar.y: Do not desugar incrementations directly.
    * src/runner/interpreter-visit.hxx: Reject incrementation nodes.
    * src/rewrite/desugarer.cc,
    * src/rewrite/desugarer.hh: New. Desugar visitor.
    * src/rewrite/rewrite.cc: Add desugaring to the rewriting process.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -74,6 +74,9 @@ ignores.stamp
 implicit.cc
 implicit.hh
 implicit.hxx
+incrementation.cc
+incrementation.hh
+incrementation.hxx
 lazy.cc
 lazy.hh
 lazy.hxx
