Pretty print original ASTs.
When a node is rewritten, the original ast is now stored in the result. Pretty
printing prints original AST, unless URBI_DESUGAR is set.

    * src/ast/ast.yml: Add field to store the original ast in rewritten nodes.
    * dev/ast-cloner-gen: Store it.
    * dev/ast-pretty-printer-gen: Pretty print the original ast.
    * dev/tools.py: Remove const mark from smart pointers too.
    * src/ast/cloner.hxx: Do not bypass operator().

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -211,6 +211,11 @@ Ast:
         type: loc
         access: rW
         desc: Scanner position information
+    - original:
+        type: rConstAst
+        access: rW
+        desc: Original node, if this is a rewrite
+        init: "0"
 
 Exp:
   super:
