Do not desugar decrementations immediately.
This enable to pretty-print the sugared version of decrementations.

    * src/ast/ast.yml
    (Unary): New node for unary operators factoring.
    (Decrementation): New node for decrementations ('--') constructs.
    * src/parser/ugrammar.y: Do not desugar decrementations.
    * src/rewrite/desugarer.cc,
    * src/rewrite/desugarer.hh: Desugar decrementations.
    * src/runner/interpreter-visit.hxx: Reject decrementation nodes.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -42,6 +42,9 @@ continue.hxx
 declaration.cc
 declaration.hh
 declaration.hxx
+decrementation.cc
+decrementation.hh
+decrementation.hxx
 default-visitor.hh
 default-visitor.hxx
 default-visitor.stamp
@@ -133,6 +136,9 @@ tagged-stmt.hxx
 this.cc
 this.hh
 this.hxx
+unary.cc
+unary.hh
+unary.hxx
 visitor.hh
 visitor.hxx
 visitor.stamp
