--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -3,9 +3,6 @@ all.stamp
 and.cc
 and.hh
 and.hxx
-assignment.cc
-assignment.hh
-assignment.hxx
 ast-fwd-gen.stamp
 ast-nodes-gen.stamp
 ast-nodes.mk
@@ -39,9 +36,6 @@ closure.hxx
 continue.cc
 continue.hh
 continue.hxx
-declaration.cc
-declaration.hh
-declaration.hxx
 decrementation.cc
 decrementation.hh
 decrementation.hxx
@@ -86,6 +80,12 @@ lazy.hxx
 list.cc
 list.hh
 list.hxx
+local-assignment.cc
+local-assignment.hh
+local-assignment.hxx
+local-declaration.cc
+local-declaration.hh
+local-declaration.hxx
 local-write.cc
 local-write.hh
 local-write.hxx
