--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -3,6 +3,9 @@ all.stamp
 and.cc
 and.hh
 and.hxx
+assignment.cc
+assignment.hh
+assignment.hxx
 ast-fwd-gen.stamp
 ast-nodes-gen.stamp
 ast-nodes.mk
@@ -36,6 +39,9 @@ closure.hxx
 continue.cc
 continue.hh
 continue.hxx
+declaration.cc
+declaration.hh
+declaration.hxx
 decrementation.cc
 decrementation.hh
 decrementation.hxx
@@ -145,3 +151,6 @@ visitor.stamp
 while.cc
 while.hh
 while.hxx
+write.cc
+write.hh
+write.hxx
