Do not desugar in-place operators (+=, ...) at parse time.
    * src/ast/ast.yml
    (OpAssignment): New node for in-place operators.
    * src/parser/ugrammar.y: Do not desugar them.
    * src/rewrite/desugarer.cc,
    * src/rewrite/desugarer.hh
    (visit(OpAssignment)): Desugar them.
    (visit(Decrementation), visit(Decrementation)): Use += and -= to desugar ++
    and --.
    * src/runner/interpreter-visit.hxx: Reject OpAssignment nodes.
    * src/parse/ast-factory.cc,
    * src/parse/ast-factory.hh (ast_assign): Remove.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -947,6 +947,18 @@ Declaration:
 Assignment:
   super: Write
 
+OpAssignment:
+  super: Write
+  attributes:
+    - op:
+        type: 'libport::Symbol'
+  printer:
+    - ~what
+    - '" "'
+    - $op
+    - '"= "'
+    - ~value
+
 Local:
   super: Exp
   attributes:
@@ -1028,7 +1040,7 @@ Unary:
   desc: /// Expressions with a expression
   attributes:
     - exp:
-        type: rExp
+        type: rCall
         desc: Operand
         access: r
 
