Do not desugar properties at parse time.
    * src/ast/ast.yml
    (PropertyRead): New node for properties accesses.
    (PropertyWrite): New node for properties assignments.
    (PropertyAction): New node to factor previous ones.
    * src/parser/ugrammar.y: Do not desugar.
    * src/rewrite/desugarer.cc,
    * src/rewrite/desugarer.hh: Desugar.
    * src/runner/interpreter-visit.hxx: Reject those nodes.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -121,6 +121,15 @@ pipe.hxx
 pretty-printer.cc
 pretty-printer.hh
 pretty-printer.stamp
+property-action.cc
+property-action.hh
+property-action.hxx
+property-read.cc
+property-read.hh
+property-read.hxx
+property-write.cc
+property-write.hh
+property-write.hxx
 return.cc
 return.hh
 return.hxx
